droping field name
